[tool.poetry]
name = "wolt_assignment"
version = "0.1.0"
description = ""
authors = ["kershov <ersh.andreich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
jupyter = "^1.0.0"
scikit-learn = "^1.2.0"
seaborn = "^0.12.2"
matplotlib = "^3.6.3"
catboost = "^1.1.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
